# B1GPicks

./: .gitignore  FIXES.md  IMPLEMENTATION_NOTES.md  LICENSE  QUICK_START.md  README.md  SETUP.md  TEST_RESULTS.md  debug_espn.py  environment.yml  game_predictors_20251201_085204.json  pyproject.toml  verify_setup.py
examples/: README.md  scrape_predictors.py
src/b1gpicks/: __init__.py  scraper.py
tests/: __init__.py  test_scraper.py
